# sdl2lib_taglib

./: Makefile  app  app_test_metadata  main  main.cpp  metadata_music  metadata_video  note.txt  test_metadata.cpp  test_metadata_music  test_metadata_music.cpp  test_metadata_video  test_metadata_video.cpp  test_uart.cpp
board_KL46Z/.metadata/: version.ini
board_KL46Z/.metadata/.plugins/org.eclipse.cdt.core/: kl46z.language.settings.xml
board_KL46Z/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
board_KL46Z/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
board_KL46Z/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
board_KL46Z/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
board_KL46Z/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
board_KL46Z/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.bluebird-virtual-machine_0/: node.properties
board_KL46Z/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
board_KL46Z/kl46z_newbie/: .project
board_KL46Z/kl46z_newbie/Beans/kl46z/: kl46z.bean  kl46z.html  kl46zEvents.html  kl46zMethods.html  kl46zProperties.html  kl46zUser Types.html
board_KL46Z/kl46z_newbie/Beans/kl46z/Drivers/: kl46z.src
test uart/: test_uart  test_uart.cpp  uart_read
test_cli/: CMakeLists.txt  main.cpp  menu_app
test_music/: test_metadata_music  test_metadata_music.cpp
test_video/: metadata_video.cpp  test_metadata_video  test_metadata_video.cpp
(+5 files in other folders)
